@startuml

entity "options_contracts" {
  *symbol : VARCHAR(50) <<PK>>
  --
  underlying_symbol : VARCHAR(20)
  type : VARCHAR(10)
  expiration_date : TEXT
  strike : DECIMAL(12, 3)
  description : TEXT
}

entity "market_prices" {
  *id : INTEGER <<PK>>
  --
  contract_symbol : VARCHAR(50) <<FK>>
  price : DECIMAL(12, 3)
  broker_timestamp : TEXT
  system_timestamp : TEXT
  volume : INTEGER
}

entity "positions" {
  *id : INTEGER <<PK>>
  --
  name : VARCHAR(100)
  description : TEXT
  status : VARCHAR(20)
  created_at : TEXT
}

entity "operations" {
  *id : INTEGER <<PK>>
  --
  contract_symbol : VARCHAR(50) <<FK>>
  operation_type : VARCHAR(4)
  quantity : INTEGER
  price : DECIMAL(12, 3)
  operation_date : TEXT
}

entity "position_contains_operations" {
  *position_id : INTEGER <<PK, FK>>
  *operation_id : INTEGER <<PK, FK>>
}

options_contracts ||..o{ market_prices : "has many"
options_contracts ||..o{ operations : "referenced in"
positions ||..o{ position_contains_operations : "has"
operations ||..o{ position_contains_operations : "included in"

@enduml
